docs: update README with requirements and installation steps